# summer_bumps

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
input/: example.csv  wk1.csv  wk10.csv  wk2.csv  wk3.csv  wk4.csv  wk5.csv  wk6.csv  wk7.csv  wk8.csv  wk9.csv
output/: output_wk10.txt  output_wk7.txt  output_wk8.txt  output_wk9.txt  wk4_output.txt  wk6.txt
src/: division.py  fileParser.py  summer_bumps.py
src/summer_bumps/: __main__.py  division.py  fileParser.py  rower.py  settings.py
