[metadata]
name = summer_bumps
version = 1.0.0
description = Run points based bumps charts.
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
license_file = LICENSE
author = Andrew Farquharson
author_email = ajfarquharson1@gmail.com
url = https://github.com/AJ11797/summer_bumps
classifiers = 
    Natural Language :: English
    Programming Language :: Python

[options]
package_dir = 
    = src
packages = find:

[options.packages.find]
where = src
python_requires = >=3.6, <4

[options.entry_points]
console_scripts = 
    summer_bumps = summer_bumps.__main__:main